add ユーザー登録機能 #5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="bumblebee">
   <head>
     <title>LeagueHighlight</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
+    <%= render 'shared/flash_messages' %>
     <%= yield %>
   </body>
 </html>
