--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="flex-1">
     <a class="btn btn-ghost normal-case text-xl mr-3">League Highlight</a>
     <div class="form-control">
-      <input type="text" placeholder="キーワードを入力" class="input input-bordered w-96 h-10">
+      <input type="text" placeholder="キーワードを入力" autocomplete="on" class="input input-bordered w-96 h-10">
     </div>
   </div>
   <div class="flex-none gap-2">
