--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,8 @@
             <% end %>
           </div>
           <div class="text-center pt-12 pb-12">
-              <p>アカウントをお持ちですか？<a href="#" class="underline font-semibold">ログインページへ</a></p>
+              <p>アカウントをお持ちですか？</p>
+              <p><%= link_to 'ログインページへ', login_path, class: 'underline font-semibold' %></p>
           </div>
       </div>
     </div>
