--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,7 @@
     <div class="dropdown dropdown-end">
       <label tabindex="0" class="btn btn-ghost btn-circle avatar">
         <div class="w-10 rounded-full">
+          <%= image_tag 'avatar' %>
         </div>
       </label>
       <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
@@ -23,7 +24,11 @@
           </a>
         </li>
         <li><a>Settings</a></li>
-        <li><a>Logout</a></li>
+        <li>
+          <%= link_to 'ログアウト',
+                      logout_path, 
+                      data: { turbo_method: :delete, turbo_confirm: 'ログアウトします' } %>
+        </li>
       </ul>
     </div>
   </div>
