--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 bg-yellow-400 drop-shadow-md md:drop-shadow-xl">
+<div id="header" class="navbar bg-base-100 bg-yellow-400 drop-shadow-md md:drop-shadow-xl">
   <div class="flex-1">
     <a class="btn btn-ghost normal-case text-xl mr-3">League Highlight</a>
     <div class="form-control">
@@ -6,30 +6,35 @@
     </div>
   </div>
   <div class="flex-none gap-2">
-    <ul class="menu menu-horizontal px-1">
-      <li><%= link_to 'ログイン', login_path, class: 'mr-1' %></li>
-      <li><%= link_to '会員登録', signup_path, class: 'mr-1' %></li>
-    </ul>
-    <div class="dropdown dropdown-end">
-      <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <%= image_tag 'avatar' %>
-        </div>
-      </label>
-      <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-        <li>
-          <a class="justify-between">
-            Profile
-            <span class="badge">New</span>
-          </a>
-        </li>
-        <li><a>Settings</a></li>
-        <li>
-          <%= link_to 'ログアウト',
-                      logout_path,
-                      data: { turbo_method: :delete, turbo_confirm: 'ログアウトします' } %>
-        </li>
+    <% unless logged_in? %>
+      <ul class="menu menu-horizontal px-1">
+        <li><%= link_to 'ログイン', login_path, class: 'mr-1' %></li>
+        <li><%= link_to '会員登録', signup_path, class: 'mr-1' %></li>
       </ul>
-    </div>
+    <% end %>
+    <% if logged_in? %>
+      <!-- Avatar -->
+      <div id="header-avatar-dropdown" class="dropdown dropdown-end">
+        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <%= image_tag 'avatar' %>
+          </div>
+        </label>
+        <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+          <li>
+            <a class="justify-between">
+              Profile
+              <span class="badge">New</span>
+            </a>
+          </li>
+          <li><a>Settings</a></li>
+          <li>
+            <%= link_to 'ログアウト',
+                        logout_path,
+                        data: { turbo_method: :delete, turbo_confirm: 'ログアウトします' } %>
+          </li>
+        </ul>
+      </div>
+    <% end %>
   </div>
 </div>
