--- a/app/views/shared/_flash_messages.html.erb
+++ b/app/views/shared/_flash_messages.html.erb
@@ -1,3 +1,4 @@
 <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %> shadow-lg"><%= message %></div>
+  <div class="alert alert-<%= message_type %> shadow-lg rounded-none"><%= message %></div>
 <% end %>
+<div class="alert-success alert-error alert-info alert-warning"></div>
